2009-05-04  Nikolas Coukouma <atrus@zmanda.com>
	* application-src/ampgsql.pl: accept gnutar-path option;
	  use absolute path when calling unlink()

2009-05-04  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.c: do not include a partial part in the size
	  calculation

2009-04-30  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Fix deadlock.

2009-04-30  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c, application-src/amstar.c: Validate if
	  binary not available.

2009-04-30  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amstar.c: Compile pattern once.
	                            Remove a superfluous '\n'.

2009-04-30  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amstar.c: Handle hard link.

2009-04-29  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/changer.c: s/execve/execv

2009-04-29  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/changer.c: Pass command override to chg-glue.
	* changer-src/chg-glue.pl: Parse command override.

2009-04-28  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amadmin.c: Fix error reporting in find subcommand.

2009-04-28  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/amrecover.h: Change prototype.
	* recover-src/extract_list.c: merge_path, abort if cd_* failed.
	* recover-src/set_commands.c: Many functions return 0 or 1.

2009-04-28  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amsuntar.pl: Fix redirection in validate command.

2009-04-28  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amcheck.8.xml, man/xml-source/amfetchdump.8.xml,
	  man/xml-source/amflush.8.xml,
	  man/xml-source/amrestore.8.xml: Fix order of -o argument.
	* restore-src/amfetchdump.c, restore-src/amrestore.c,
	  server-src/amcheck.c,
	  server-src/amflush.c: Fix order of -o argument in usage function.

2009-04-28  Jean-Louis Martineau <martineau@zmanda.com>