@@ -29,10 +29,13 @@
       <command>amdevcheck</command>
       <arg choice='plain'><replaceable>config</replaceable></arg>
       <group choice='opt'>
-        <arg choice='plain'><replaceable>device name</replaceable></arg>
+        <arg choice='plain'><replaceable>device-name</replaceable></arg>
       </group>
       <group choice='opt'>
-        <arg choice='plain'>-properties<replaceable>list</replaceable></arg>
+        <arg choice='plain'>--label</arg>
+      </group>
+      <group choice='opt'>
+        <arg choice='plain'>-properties <replaceable>list</replaceable></arg>
       </group>
       <arg choice='plain' rep='repeat'><group><arg choice='plain'>-o
       </arg><replaceable>configoption</replaceable></group></arg>
@@ -77,6 +80,15 @@
             Amanda device to use. This option overrides any tapedev configuration
             specified in the configuration file.
           </para>
+        </listitem>
+      </varlistentry>
+
+      <varlistentry>
+        <term><replaceable>--label</replaceable></term>
+        <listitem>
+          <para>
+	    Print the label of the loaded volume.
+	  </para>
         </listitem>
       </varlistentry>
 
